style: fix the see-through header with z-index

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,6 +4,7 @@
   width: 100%;
   background-color: var(--header);
   padding: 1rem 2rem;
+  z-index: 1;
 }
 
 .links-list {
